# medlex-spotter

./:  .pre-commit-config.yaml  .gitignore  README.md  pyproject.toml  requirements.txt
 .github/workflows/: ci.yml
app/: streamlit_app.py
configs/: example_targets.yaml
data/examples/: notes.tsv
eval/: labels.tsv
src/medlex/: cli.py  config.py  context.py  matchers.py  pipeline.py  preprocess.py  targets.py
tests/: test_end_to_end.py
